JS-2155 JavaVectors